--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 byteorder = "1.5.0"
+clap = { version = "4.4.16", features = ["derive"] }
 ctrlc = "3.4.2"
 libc = "0.2.151"
 termios = "0.3.3"
